--- a/waybar/style.css
+++ b/waybar/style.css
@@ -26,7 +26,9 @@ tooltip {
 #network,
 #pulseaudio,
 #temperature,
-#backlight {
+#backlight,
+.custom-spotify,
+#custom-spotify {
     margin: 6px 6px 6px 0px;
     padding: 2px 8px;
 }
@@ -107,4 +109,15 @@ tooltip {
     color: #c14a4a;
     padding-left: 5px;
     padding-right: 5px;
+}
+
+.custom-spotify,
+#custom-spotify {
+    font-family: "NotoSansMono Nerd Font";
+    color: #00d402;
+    border: 1px solid #00d402;
+    padding-left: 10px;
+    padding-right: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
